--- a/xiaoningrolebinding.yaml
+++ b/xiaoningrolebinding.yaml
@@ -3,14 +3,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: pengdurolebinding
-  namespace: pengdu-namespace
-  tenant: pengdutenant
+  name: xiaoningrolebinding
+  namespace: xiaoning-namespace
+  tenant: xiaoningtenant
 subjects:
 - kind: User
-  name: pengdu
+  name: xiaoning
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: pengdurole
+  name: xiaoningrole
   apiGroup: rbac.authorization.k8s.io
