--- a/applerole.yaml
+++ b/applerole.yaml
@@ -1,9 +1,9 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: xiaoningrole
-  tenant: xiaoningtenant
-  namespace: xiaoning-namespace 
+  name: applerole
+  tenant: appletenant
+  namespace: apple-namespace 
 rules:
 - apiGroups: [""]
   resources: ["pods"]
