--- a/futureweirolebinding.yaml
+++ b/futureweirolebinding.yaml
@@ -3,14 +3,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: xiaoningrolebinding
-  namespace: xiaoning-namespace
-  tenant: xiaoningtenant
+  name: futureweirolebinding
+  namespace: futurewei-namespace
+  tenant: futureweitenant
 subjects:
 - kind: User
-  name: xiaoning
+  name: xiaoning 
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: xiaoningrole
+  name: futureweirole
   apiGroup: rbac.authorization.k8s.io
