--- a/futureweirole.yaml
+++ b/futureweirole.yaml
@@ -5,6 +5,6 @@ metadata:
   tenant: futureweitenant
   namespace: futurewei-namespace 
 rules:
-- apiGroups: [""]
-  resources: ["pods", "jobs"]
+- apiGroups: ["*"]
+  resources: ["*"]
   verbs: ["create", "get", "list", "watch", "delete"]
