--- a/futureweiclusterrolebinding.yaml
+++ b/futureweiclusterrolebinding.yaml
@@ -1,14 +1,13 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: futureweirolebinding
-  namespace: futurewei-namespace
+  name: futureweiclusterrolebinding
   tenant: futureweitenant
 subjects:
 - kind: User
-  name: johndoe 
+  name: xiaoning 
   apiGroup: rbac.authorization.k8s.io
 roleRef:
-  kind: Role
-  name: futureweirole
+  kind: ClusterRole
+  name: futureweiclusterrole
   apiGroup: rbac.authorization.k8s.io
