--- a/web.yaml
+++ b/web.yaml
@@ -15,10 +15,10 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: web
+  name: goose-ss 
 spec:
   serviceName: "nginx"
-  replicas: 2
+  replicas: 2 
   selector:
     matchLabels:
       app: nginx
@@ -45,4 +45,3 @@ spec:
       resources:
         requests:
           storage: 1Gi
-
